# edrefis

./: .gitignore  .gitmodules  Cargo.toml  REUSE.toml  audio.js  audio.min.js  gl.js  gl.min.js  graphics.aseprite  index.html
app/: Cargo.toml  index.html  index.js
app/src/: ashader.wgsl  gpu.rs  graphics.rs  graphics_gpu.rs  lib.rs  main.rs  main_sdl.rs  main_web.rs  shader.wgsl  sounds.rs  text.rs
app/src/gfx/: REUSE.toml  frame.aseprite.license  tiles.aseprite
client/: Cargo.toml
client/src/: cubes.rs  frame.aseprite  gfx.rs  macroutils.rs  main.rs  nakama.rs  replay.rs  sound.rs  text.rs
logic/: Cargo.toml
logic/src/: field.rs  hooks.rs  input.rs  lib.rs  piece.rs  proto.rs  randomizer.rs  well.rs
nanotime/: Cargo.toml
nanotime/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
