# SPDX-FileCopyrightText: 2024 Janet Blackquill <uhhadd@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.37.0", features = ["image", "ttf", "mixer", "raw-window-handle"] }
logic = { path = "../logic" }
sdl3 = { version = "0", features = ["build-from-source-static"] }
wgpu = { version = "23.0.0", features = ["webgl"] }
pollster = "0.4.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
# cgmath = "0.18.0"
glam = "0.29.2"
glyphon = "0.7.0"
cosmic-text = { version = "0.12", features = ["std", "swash", "vi"], default-features = false }
