# SPDX-FileCopyrightText: 2024 Janet Blackquill <uhhadd@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "edrefis_web"
crate-type = ["cdylib"]

[dependencies]
logic = { path = "../logic" }
wgpu = { version = "23.0.0", features = ["webgl"] }
bytemuck = { version = "1.19.0", features = ["derive"] }
glam = "0.29.2"
glyphon = "0.7.0"
cosmic-text = { version = "0.12", features = ["std", "swash"], default-features = false }
minipng = "0.1.1"

[target.'cfg(target_family="wasm")'.dependencies]
winit = "0.30.5"
web-sys = "0.3.76"
futures = "0.3.31"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_family="wasm"))'.dependencies]
sdl2 = { version = "0.37.0", features = ["mixer", "raw-window-handle"] }
pollster = "0.4.0"
nanotime = { path = "../nanotime" }
