# SPDX-FileCopyrightText: 2024 Janet Blackquill <uhhadd@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.13", features = ["audio"] }
logic = { path = "../logic" }
quad-net = "0.1.2"
nanoserde = "0.1.37"
